Add Sign-Up form

--- a/index.html
+++ b/index.html
@@ -32,7 +32,33 @@
     </nav>
     <main class="container">
       <div class="row">
-        <div class="col-8"></div>
+        <div class="col-6">
+          <div class="signupForm card shadow p-3 mb-5">
+            <form action="" class="form">
+              <h1 class="title text-center text-info mb-2">Sign Up</h1>
+              <hr class="hr mb-4">
+              <div class="inputContainer">
+                <input type="text" class="input form-control" placeholder="a">
+                <label for="" class="label form-label">Email</label>
+              </div>
+              <div class="inputContainer">
+                <input type="text" class="input form-control" placeholder="a">
+                <label for="" class="label form-label">Username</label>
+              </div>
+              <div class="inputContainer">
+                <input type="text" class="input form-control" placeholder="a">
+                <label for="" class="label form-label">Password</label>
+              </div>
+              <div class="inputContainer">
+                <input type="text" class="input form-control" placeholder="a">
+                <label for="" class="label form-label">Confirm Password</label>
+              </div>
+              <div class="d-grid shadow">
+                <input type="submit" value="Sign Up" class="submitBtn btn btn-danger btn-lg">
+              </div>
+            </form>
+          </div>
+        </div>
         <div class="col-4"></div>
       </div>
     </main>
