--- a/index.html
+++ b/index.html
@@ -1,75 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Git And GitHub</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Git And GitHub</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body>
-    <nav class="nav navbar-expand-lg navbar-dark bg-primary shadow mb-5">
-      <div class="container-fluid">
-        <a href="#" class="navbar-brand">NavBar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTarget" aria-controls="navbarTarget" aria-expanded="false" aria-label="Togle Navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTarget">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a href="#" aria-current="page" class="nav-link active">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" aria-current="page" class="nav-link active">Edit</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" aria-current="page" class="nav-link active">View</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" aria-current="page" class="nav-link active">About</a>
-            </li>
-          </ul>
+
+<body>
+  <nav class="nav navbar-expand-lg navbar-dark bg-primary shadow mb-5">
+    <div class="container-fluid">
+      <a href="#" class="navbar-brand">NavBar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTarget"
+        aria-controls="navbarTarget" aria-expanded="false" aria-label="Togle Navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTarget">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="#" aria-current="page" class="nav-link active">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" aria-current="page" class="nav-link active">Edit</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" aria-current="page" class="nav-link active">View</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" aria-current="page" class="nav-link active">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <main class="container">
+    <div class="row">
+      <div class="col-6">
+        <div class="signupForm card shadow p-3 mb-5">
+          <form action="" class="form">
+            <h1 class="title text-center text-info mb-2">Sign Up</h1>
+            <hr class="hr mb-4">
+            <div class="inputContainer">
+              <input type="text" class="input form-control">
+              <label for="" class="label form-label">Email</label>
+            </div>
+            <div class="inputContainer">
+              <input type="text" class="input form-control">
+              <label for="" class="label form-label">Username</label>
+            </div>
+            <div class="inputContainer">
+              <input type="text" class="input form-control">
+              <label for="" class="label form-label">Password</label>
+            </div>
+            <div class="inputContainer">
+              <input type="text" class="input form-control">
+              <label for="" class="label form-label">Confirm Password</label>
+            </div>
+            <div class="d-grid shadow">
+              <input type="submit" value="Sign Up" class="submitBtn btn btn-danger btn-lg">
+            </div>
+          </form>
         </div>
       </div>
-    </nav>
-    <main class="container">
-      <div class="row">
-        <div class="col-6">
-          <div class="signupForm card shadow p-3 mb-5">
-            <form action="" class="form">
-              <h1 class="title text-center text-info mb-2">Sign Up</h1>
-              <hr class="hr mb-4">
-              <div class="inputContainer">
-                <input type="text" class="input form-control" placeholder="a">
-                <label for="" class="label form-label">Email</label>
-              </div>
-              <div class="inputContainer">
-                <input type="text" class="input form-control" placeholder="a">
-                <label for="" class="label form-label">Username</label>
-              </div>
-              <div class="inputContainer">
-                <input type="text" class="input form-control" placeholder="a">
-                <label for="" class="label form-label">Password</label>
-              </div>
-              <div class="inputContainer">
-                <input type="text" class="input form-control" placeholder="a">
-                <label for="" class="label form-label">Confirm Password</label>
-              </div>
-              <div class="d-grid shadow">
-                <input type="submit" value="Sign Up" class="submitBtn btn btn-danger btn-lg">
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-4"></div>
-      </div>
-    </main>
-    <h1 class="bg-primary text-center text-white rounded">Hello GitHub World </h1>
-    <button type="button" class="btn btn-outline-primary" onclick="MyClick()">Click Me</button>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-  </body>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script> -->
-  <script>
-    function MyClick(){
-      console.log("Learning Git and GitHub is fun...");
-    }
-  </script>
+      <div class="col-4"></div>
+    </div>
+  </main>
+  <footer>
+    <div class="bg-secondary text-center py-2">
+      <h class="tex-muted">&copy; 2021</h>
+      <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, earum?</p>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
+</body>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script> -->
+<script>
+  function MyClick() {
+    console.log("Learning Git and GitHub is fun...");
+  }
+</script>
+
 </html>
